[package]
name = "full_statement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
image = "0.24.7"
num-format = "0.4.4"
num-traits = "0.2.17"
printpdf = "0.6.0"
rust_decimal = "1.33.0"
rust_decimal_macros = "1.33.0"
serde = { version= "1.0.192", features= ["derive"] }
serde_json = "1.0.108"

[lib]
name = "full_statement"
path = "src/main.rs"
crate-type = ["cdylib"]
