[package]
name = "full_statement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
image = "0.24.7"
numfmt = "1.1.1"
printpdf = "0.6.0"
rust_decimal = "1.33.0"
rust_decimal_macros = "1.33.0"
serde = { version= "1.0.192", features= ["derive"] }
serde_json = "1.0.108"
textwrap = "0.16.0"
futures="0.3"
node-bindgen = { version = "6.0.1" }
tslink = "0.1.0"

[build-dependencies]
node-bindgen = { version = "6.0", features = ["build"] }

[lib]
name = "full_statement"
path = "src/lib.rs"
crate-type = ["cdylib"]
